# Lython_GCU

./: README.md  pyproject.toml  requirements.txt
lython/: __init__.py  auth.py  chat.py  db.py  rag_chat.py  schema.sql
lython/static/: style.css
lython/templates/: base.html
lython/templates/auth/: login.html  register.html
lython/templates/chat/: index.html
lython/templates/rag_chat/: rag_chat.html
lython_basic/: __init__.py  auth.py  chat.py  codingbat_urls.csv  db.py  rag_chat.py
lython_basic/static/: style.css
lython_basic/templates/chat/: history.html  index.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py
