[project]
name = "lython_basic"
version = "1.0.2"
authors = [
  { name="Richard Pointing", email="rpointing97@gmail.com" },
]
description = "A Flask application for learning and interacting with Python concepts."
dependencies = [
    "flask",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_ooptions]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["lython_basic"]

[project.urls]
Homepage = 'https://github.com/mr-pointing/Lython_GCU'